// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`usegroup multiple 1`] = `
Program {
  "children": Array [
    UseGroup {
      "items": Array [
        UseItem {
          "alias": Identifier {
            "kind": "identifier",
            "name": "Another",
          },
          "kind": "useitem",
          "name": "My\\\\Full\\\\Classname",
          "type": null,
        },
        UseItem {
          "alias": null,
          "kind": "useitem",
          "name": "My\\\\Full\\\\NSname",
          "type": null,
        },
      ],
      "kind": "usegroup",
      "name": null,
      "type": null,
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`usegroup nested 1`] = `
Program {
  "children": Array [
    UseGroup {
      "items": Array [
        UseItem {
          "alias": null,
          "kind": "useitem",
          "name": "ClassA",
          "type": null,
        },
        UseItem {
          "alias": null,
          "kind": "useitem",
          "name": "ClassB",
          "type": null,
        },
        UseItem {
          "alias": Identifier {
            "kind": "identifier",
            "name": "C",
          },
          "kind": "useitem",
          "name": "ClassC",
          "type": null,
        },
      ],
      "kind": "usegroup",
      "name": "some\\\\my_namespace",
      "type": null,
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`usegroup nested 2 1`] = `
Program {
  "children": Array [
    UseGroup {
      "items": Array [
        UseItem {
          "alias": null,
          "kind": "useitem",
          "name": "fn_a",
          "type": null,
        },
        UseItem {
          "alias": null,
          "kind": "useitem",
          "name": "fn_b",
          "type": null,
        },
        UseItem {
          "alias": null,
          "kind": "useitem",
          "name": "fn_c",
          "type": null,
        },
      ],
      "kind": "usegroup",
      "name": "some\\\\my_namespace",
      "type": "function",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`usegroup nested 3 1`] = `
Program {
  "children": Array [
    UseGroup {
      "items": Array [
        UseItem {
          "alias": null,
          "kind": "useitem",
          "name": "ConstA",
          "type": null,
        },
        UseItem {
          "alias": null,
          "kind": "useitem",
          "name": "ConstB",
          "type": null,
        },
        UseItem {
          "alias": null,
          "kind": "useitem",
          "name": "ConstC",
          "type": null,
        },
      ],
      "kind": "usegroup",
      "name": "some\\\\my_namespace",
      "type": "const",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`usegroup simple 1`] = `
Program {
  "children": Array [
    UseGroup {
      "items": Array [
        UseItem {
          "alias": Identifier {
            "kind": "identifier",
            "name": "Another",
          },
          "kind": "useitem",
          "name": "My\\\\Full\\\\Classname",
          "type": null,
        },
      ],
      "kind": "usegroup",
      "name": null,
      "type": null,
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;
